--- a/config/database.yml
+++ b/config/database.yml
@@ -1,20 +1,15 @@
-# SQLite version 3.x
-#   gem install sqlite3
-#
-#   Ensure the SQLite 3 gem is defined in your Gemfile
-#   gem 'sqlite3'
 development:
-  adapter: sqlite3
-  database: db/development.sqlite3
+  adapter: postgresql
+  database: admin_panel
   pool: 5
   timeout: 5000
+  username: admin
+  password: admin
+  host: localhost
 
-# Warning: The database defined as "test" will be erased and
-# re-generated from your development database when you run "rake".
-# Do not set this db to the same as development or production.
 test:
   adapter: sqlite3
-  database: db/test.sqlite3
+  database: admin_panel
   pool: 5
   timeout: 5000
 
@@ -23,3 +18,11 @@ production:
   database: db/production.sqlite3
   pool: 5
   timeout: 5000
+
+remote_db:
+  adapter: postgresql
+  host: 185.31.160.161
+  port: 5432
+  database: fusionpbx
+  username: webclient
+  password: test
